added on swagger and user
